# unicorn

./: CMakeLists.txt  config.status  list.c  uc.c
include/: uc_priv.h
include/unicorn/: unicorn.h
jni/: Unicorn.c  Unicorn.h
qemu/: aarch64.h  aarch64eb.h  arm.h  armeb.h  header_gen.py  m68k.h  memory.c  mips.h  mips64.h  mips64el.h  mipsel.h  sparc.h  sparc64.h  unicorn_common.h  x86_64.h
qemu/include/exec/: exec-all.h  gen-icount.h  memory.h
qemu/qom/: object.c
qemu/target-arm/: translate.c  unicorn.h  unicorn_aarch64.c  unicorn_arm.c
